--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.jetsli</groupId>
-    <artifactId>perf-comparison</artifactId>
+    <artifactId>graphhopper-experiments</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>perf-comparison</name>
+    <name>GraphHopper experiments</name>
     <url>http://maven.apache.org</url>
 
     <properties>
